# neural_network

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/neural_network/: analysis_plots.py  layer.py  model.py  perceptron.py
src/neural_network/activation_functions/: activations.py  relu.py  sigmoid.py
src/neural_network/datasets/: load_mnist.py
src/neural_network/loss_functions/: cross_entropy.py  loss_functions.py  sse.py
src/neural_network/metrics/: cross_validation_score.py  scores.py
src/neural_network/models/: perceptron.py
src/neural_network/preprocessing/: one_hot.py
