[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_network"
authors = [
    {name = "Dominik Galus"},
]
version = "0.1.0"
description = "Neural Network in Jax"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = "requirements/base.txt"}

[tool.ruff]
lint.select = ["ALL", "E302"]
line-length=120
lint.ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "N818",
    "D213",  # ignore rules causing conflicts
    "D211",
    "S311",
    "FIX002",
    "TD003",
    "CPY001",
]
preview = true
